# ROS_message_comunication

./: README.md
min_test/message/: CMakeLists.txt  package.xml
min_test/message/msg/: Message0.msg  Message1.msg  Message2.msg  Message3.msg
min_test/message/src/: msg.py
min_test/ros_node0/: CMakeLists.txt  package.xml
min_test/ros_node0/src/: ros_node0.cpp  ros_node0.py
min_test/ros_node1/: CMakeLists.txt  package.xml
min_test/ros_node1/src/: ros_node1.cpp
min_test/ros_node2/: CMakeLists.txt  package.xml
min_test/ros_node2/src/: ros_node2.cpp
min_test/ros_node3/: CMakeLists.txt  package.xml
min_test/ros_node3/launch/: nodelaunch.launch
min_test/ros_node3/src/: ros_node3.cpp  ros_node4.cpp  ros_node5.cpp
